IndexedDB: IDBTransaction::abort() should throw DOMException https://bugs.webkit.org/show_bug.cgi?id=92069

Patch by Xingnan Wang <xingnan.wang@intel.com> on 2012-07-25
Reviewed by Kentaro Hara.

Source/WebCore:

Keep aligned with the W3C spec.
http://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html#widl-IDBTransaction-abort-void

Test: storage/indexeddb/transaction-abort.html.

* Modules/indexeddb/IDBTransaction.cpp:
(WebCore::IDBTransaction::abort):
(WebCore):
* Modules/indexeddb/IDBTransaction.h:
(IDBTransaction):
* Modules/indexeddb/IDBTransaction.idl:

LayoutTests:

Add the exception test for IDBTransaction::abort().

* storage/indexeddb/resources/transaction-abort.js:
(transactionAborted):
* storage/indexeddb/transaction-abort-expected.txt:

Canonical link: https://commits.webkit.org/110135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@123698 268f45cc-cd09-0410-ab3c-d52691b4dbfc